# rose

config/: support-rose.m4
docs/Rose/: rose.cfg.in
projects/symbolicAnalysisFramework/: Makefile.am
projects/symbolicAnalysisFramework/src/: Makefile.am
projects/symbolicAnalysisFramework/src/chkptRangeAnalysis/: Makefile.am
projects/symbolicAnalysisFramework/src/mpiAnal/: Makefile.am
projects/symbolicAnalysisFramework/src/ompAnal/: Makefile.am
projects/symbolicAnalysisFramework/src/parallelCFG/: Makefile.am
projects/symbolicAnalysisFramework/src/taintAnalysis/: Makefile.am
projects/symbolicAnalysisFramework/src/unionFind/: Makefile.am
projects/symbolicAnalysisFramework/src/varBitVector/: Makefile.am
projects/symbolicAnalysisFramework/src/varLatticeVector/: Makefile.am
projects/symbolicAnalysisFramework/tests/: Makefile.am
src/midend/programAnalysis/genericDataflow/: AnalysisDebuggingUtils.C  AnalysisDebuggingUtils.h  Makefile_variables  README  context_free.C  context_free.fails.C  context_free.works.C  detail.1-0.html
src/midend/programAnalysis/genericDataflow/analysis/: abstract_object.C  abstract_object.h  abstract_object_map.C  abstract_object_map.h  abstract_object_set.C  analysis.C  (+13 more)
tests/roseTests/programAnalysisTests/generalDataFlowAnalysisTests/: Makefile.am  Makefile.am.backup  compositionalTestAnalysis.C  compositionalTestInput1.C  compositionalTestInput2.C  compositionalTestInput3.C  compositionalTestInput3b.C  compositionalTestInput4.C  constantPropagationTest.conf  cp_test_status.txt  sas13Fig1Example.cpp  simplePtrTest.cpp
(+25 files in other folders)
