include $(top_srcdir)/config/Makefile.for.ROSE.includes.and.libs

# Liao 10/6/2010.  add Greg's symbolic analysis work into ROSE
# SA 3/4/2013 disabling analyses due to new dataflow API
# SUBDIRS = include src  tests
EXTRA_DIST = include src tests common.for.dep.libs

check-local:
	@echo "***********************************************************************************************"
	@echo "*** ROSE/projects/symbolicAnalysisFramework: make check rule complete (terminated normally) ***"
	@echo "***********************************************************************************************"
